[package]
name = "api-feeder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono"] }
reqwest = { version = "0.13.4", features = ["json"] }
tokio-cron-scheduler = "0.15.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.7.0", features = ["trace"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }